syntax = "proto3";

option go_package = "amusing-x.com/pangu/panguservice";

package panguservice;

message CategoryCreateRequest {
  int64 ID = 1;
  string Name = 2;
  string Desc = 3;
}

message CategoryCreateResponse {
  int64 ID = 1;
  string Name = 2;
  string Desc = 3;
}